Bugfix: GroupedLinkListLayout css displayed subentries in the wrong position.

--- a/solute/epfl/components/grouped_link_list_layout/static/grouped_link_list_layout.css
+++ b/solute/epfl/components/grouped_link_list_layout/static/grouped_link_list_layout.css
@@ -1,12 +1,26 @@
-.grouped-entry .list-group {
-    display: inline;
-    position: absolute;
+.epfl-list {
+    overflow: visible;
+}
+
+.grouped-entry {
+    display: inline-block;
     padding: 0;
+    margin: 0 0 -5px;
+    position: relative;
+    width: 200px;
+}
+
+.grouped-entry > .list-group {
+    position: absolute;
+    top: 0;
+    left: 200px;
+    z-index: 2;
+
     width: 200px;
 
-    visibility: hidden;
+    display: none;
 }
 
 .grouped-entry:hover .list-group {
-    visibility: visible;
+    display: block;
 }
